src/test/resources/tests/31_error_regular_in_multi.expected
Runtime error: Runtime Error at line 7:4: Function 'notThread' is not a thread function. Only thread functions can be used in MULTI blocks.
