src/test/resources/tests/31_error_regular_in_multi.pt
// Test: Using regular function (not thread) in multi should error
function notThread() do
    return 1
end

multi
    notThread() -> r
end
